--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   cached_network_image: ^3.1.0+1
   shimmer: ^2.0.0
+  timeago: ^3.1.0
 
 dev_dependencies:
   flutter_test:
