--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.paper_app">
+    package="com.paperNews">
    <application
-        android:label="paper_app"
+        android:label="Paper"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
