--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cached_network_image: ^3.1.0+1
   shimmer: ^2.0.0
   timeago: ^3.1.0
+  change_app_package_name: ^1.0.0
 
 dev_dependencies:
   flutter_test:
