--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   shimmer: ^2.0.0
   timeago: ^3.1.0
   change_app_package_name: ^1.0.0
+  get_storage: ^2.0.3
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
