--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,9 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   device_info: ^2.0.3
   geolocator: ^7.7.0
-  # geolocator: 
+  dropdown_search: ^2.0.1
+  # searchable_dropdown: ^1.1.3
+  # searchable_dropdown: ^1.0.0
 
 dev_dependencies:
   flutter_test:
