--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   device_info: ^2.0.3
   geolocator: ^7.7.0
   dropdown_search: ^2.0.1
-  # searchable_dropdown: ^1.1.3
+  search_choices: ^2.0.16
   # searchable_dropdown: ^1.0.0
 
 dev_dependencies:
@@ -94,10 +94,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: helvetica
+      fonts:
+        - asset: assets/fonts/helvetica.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
