--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   dropdown_search: ^2.0.1
   search_choices: ^2.0.16
   material_floating_search_bar: ^0.3.6
+  sqflite: ^2.0.2
+  path_provider: ^2.0.8
+  google_place: ^0.4.7
   # searchable_dropdown: ^1.0.0
 
 dev_dependencies:
