--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   sqflite: ^2.0.2
   path_provider: ^2.0.8
   google_place: ^0.4.7
+  share_plus: ^4.0.4
   # searchable_dropdown: ^1.0.0
 
 dev_dependencies:
